--- a/bmc_template/bmc_article.tex
+++ b/bmc_template/bmc_article.tex
@@ -356,7 +356,7 @@ This void space can be categorized according to its position and accessibility f
 As many chemical reactions are undergoing deeply inside the protein structure, it is crucial to be able to transport a small molecule (ligand) to this inner area.
 For this purpose, the molecule uses a void space, connecting this inner area (active site) with the protein surface.
 This space, forming a void path inside the protein structure, is denoted as a tunnel.
-Ligands entering the active site via these tunnels can the react with the amino acids surrounding the active site~\cite{gora2013gates,marques2017enzyme} (see Fig.~\ref{fig::motiv}) and the product of such a reaction can serve as a basis of new medication or can control and influence the protein properties. 
+Ligands entering the active site via these tunnels can react with the amino acids surrounding the active site~\cite{gora2013gates,marques2017enzyme} (see Fig.~\ref{fig::motiv}) and the product of such a reaction can serve as a basis of new medication or can control and influence the protein properties. 
  
 %This space, forming a path called tunnel, can be utilized by a small molecule (ligand) which can enter the protein inner space and react with the amino acids surrounding the protein active site~\cite{gora2013gates,marques2017enzyme} (see Fig.~\ref{fig::motiv}).
 The location and size of the tunnel determine the size and shape of a ligand passing through this tunnel to the active site.
